--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   bloc: ^8.0.3
+  google_fonts: ^3.0.1
   flutter_bloc: ^8.0.1
   shared_preferences: ^2.0.15
   flutter_localizations:
